# rhumb

./: .env.example  .gitignore  AGENTS.md  ASTRO-MIGRATION-SPEC.md  BUILD-PLAN.md  CONTRIBUTING.md  GAP6-SPEC.md  Makefile  PRINCIPLES.md  README.md  SECURITY.md  agent-capabilities.json  docker-compose.yml  llms.txt  package.json  pyproject.toml  vercel.json
.claude/: settings.local.json
.compound-beads/: QUICKSTART.md  context.md  learnings.md  rounds.jsonl
anchors/: chain-anchor-20260404T202020Z.json  chain-anchor-20260406T192843Z.json  chain-anchor-20260406T194031Z.json  chain-anchor-20260406T220134Z.json  chain-anchor-20260406T231604Z.json  chain-anchor-20260407T001500Z.json
artifacts/: apollo-reviews-spotcheck-2026-03-30.json  aud18-bigquery-hosted-proof-20260410T052102Z.json  aud18-bigquery-hosted-proof-20260410T061648Z.json  aud18-bigquery-hosted-proof-20260410T2050Z.json  aud18-bigquery-key-creation-blocker-20260410T070331Z.json  aud18-bigquery-oauth-adc-helper-dry-run-20260410T150535Z.json  aud18-bigquery-proof-source-audit-20260410T061609Z.json  aud18-bigquery-proof-source-audit-20260410T065503Z.json  aud18-bigquery-proof-source-audit-20260410T130000Z.json  aud18-bigquery-proof-source-scan-20260410T055137Z.json  aud18-crm-proof-source-audit-latest.json  aud18-hubspot-crm-hosted-proof-20260409T202256Z.json  aud18-hubspot-crm-hosted-proof-latest.json  aud18-intercom-assignment-viability-probe-20260409T155049Z.json  aud18-intercom-exact-conversation-live-proof-20260409T155552Z.json  aud18-intercom-hosted-exact-scope-proof-20260409T160740Z.json  (+291 more)
docs/: API.md  (+46 more)
(+388 files in other folders)
