[project]
name = "rhumb-monorepo"
version = "0.0.1"
description = "Rhumb monorepo tooling"
requires-python = ">=3.12"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
exclude = ["packages/web", "^build", "^dist"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["packages/api", "packages/cli", "packages/shared"]
